// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile g huge 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 30%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g wide 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g without breakpoint should be like small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;
